test/errors/packages_error/zs/default_package.zs
const uint16 SomeConstant = 0;
